--- a/loopview.html
+++ b/loopview.html
@@ -33,17 +33,27 @@
       <section id="button_søg">
         <button>Søg</button>
       </section>
+
       <section id="undervisningmateriale">
         <div class="post1">
-          <img src="bilder/loopview.html" alt="test-fugl" />
+          <img
+            src="bilder/capturing-the-human-heart-227847.jpg"
+            alt="test-undervisningmatriale"
+          />
         </div>
 
         <div class="post2">
-          <img src="bilder/loopview.html" alt="test-fugl" />
+          <img
+            src="bilder/capturing-the-human-heart-227847.jpg"
+            alt="test-undervisningmatriale"
+          />
         </div>
 
         <div class="post3">
-          <img src="bilder/loopview.html" alt="test-fugl" />
+          <img
+            src="bilder/capturing-the-human-heart-227847.jpg"
+            alt="test-undervisningmatriale"
+          />
         </div>
       </section>
     </main>
