--- a/bilder/loopview.html
+++ b/bilder/loopview.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="loopview.css" />
+
     <title>Document</title>
   </head>
   <body>
@@ -32,28 +32,13 @@
       <section id="button_søg">
         <button>Søg</button>
       </section>
-
       <section id="undervisningmateriale">
         <div class="post1">
-          <img
-            src="bilder/capturing-the-human-heart-227847.jpg"
-            alt="test-undervisningmatriale"
-          />
+          <img src="test.dms" alt="test-fugl" />
         </div>
+        <img src="test.dms" alt="test-fugl" />
 
-        <div class="post2">
-          <img
-            src="bilder/capturing-the-human-heart-227847.jpg"
-            alt="test-undervisningmatriale"
-          />
-        </div>
-
-        <div class="post3">
-          <img
-            src="bilder/capturing-the-human-heart-227847.jpg"
-            alt="test-undervisningmatriale"
-          />
-        </div>
+        <img src="test.dms" alt="test-fugl" />
       </section>
     </main>
   </body>
